<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">UPCOMING ELECTIONS</string>
    <string name="upcoming_elections_lower">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="find_my_representatives">FIND MY REPRESENTATIVES</string>
    <string name="ballot_logo">Ballot logo</string>
    <string name="party">Party</string>
    <string name="web">Web</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="representative_image">Representative image</string>
    <string name="representative_name">Name</string>
    <string name="adress_sample_text">Adress</string>
    <string name="state_sample_text">State</string>
    <string name="find_my_representatives_button">FIND MY REPRESENTATIVES</string>
    <string name="use_my_location_button">USE MY LOCATION</string>
    <string name="my_representatives">My Representatives</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="follow_election">FOLLOW ELECTION</string>
    <string name="unfollow_election">UNFOLLOW ELECTION</string>
    <string name="invalid_fragment_arguments">Cannot load Voter Info Fragment! Infalid arguments</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="representative_search">Representative Search</string>
    <string name="preview_date">12 November 2055</string>
    <string name="representative_title">Title</string>

    <!--  COMPLETED: Add necessary string values -->

</resources>
