<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="representative"
        type="com.example.android.politicalpreparedness.representative.model.Representative" />
    <variable
        name="representativeClickListener"
        type="com.example.android.politicalpreparedness.representative.adapter.RepresentativeListener" />

</data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/representativePhoto"
            profileImage="@{representative.official.photoUrl}"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/match_constraints"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:contentDescription="@string/representative_image"
            app:layout_constraintBottom_toBottomOf="@+id/tv_representative_party"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_representative_title"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{representative.office.name}"
            tools:text="@string/representative_title" />

        <TextView
            android:id="@+id/tv_representative_name"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@{representative.official.name}"
            app:layout_constraintEnd_toStartOf="@+id/wwwIcon"
            app:layout_constraintStart_toStartOf="@+id/tv_representative_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_representative_title"
            tools:text="@string/representative_name" />

        <TextView
            android:id="@+id/tv_representative_party"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:text="@{representative.official.party}"
            app:layout_constraintEnd_toEndOf="@+id/tv_representative_name"
            app:layout_constraintStart_toStartOf="@+id/tv_representative_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_representative_name"
            tools:text="@string/party" />

        <ImageView
            android:id="@+id/wwwIcon"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/match_constraints"


            android:layout_marginEnd="@dimen/icon_margin"
            android:contentDescription="@string/web"
            app:layout_constraintBottom_toBottomOf="@+id/facebookIcon"
            app:layout_constraintEnd_toStartOf="@+id/facebookIcon"
            app:layout_constraintTop_toTopOf="@+id/facebookIcon"
            app:srcCompat="@drawable/ic_www" />

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/match_constraints"
            android:layout_marginEnd="@dimen/icon_margin"
            android:contentDescription="@string/facebook"
            app:layout_constraintBottom_toBottomOf="@+id/twitterIcon"
            app:layout_constraintEnd_toStartOf="@+id/twitterIcon"
            app:layout_constraintTop_toTopOf="@+id/twitterIcon"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/match_constraints"
            android:layout_marginEnd="@dimen/margin_normal"
            android:contentDescription="@string/twitter"
            app:layout_constraintBottom_toBottomOf="@+id/tv_representative_party"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_representative_name"
            app:srcCompat="@drawable/ic_twitter"
            tools:ignore="ImageContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>