<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <!-- COMPLETED: Add data binding node -->
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />

    </data>
    <!-- COMPLETED: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- COMPLETED: Add visual styling and content -->

        <!-- COMPLETED: Add data bindin§g value -->
        <!-- COMPLETED: Add visual styling and content -->
        <androidx.constraintlayout.motion.widget.MotionLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_normal"
            app:layoutDescription="@xml/fragment_representative_scene">


            <TextView
                android:id="@+id/search_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/representative_search"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/address_line_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:autofillHints=""
                android:hint="@string/adress_sample_text"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.line1}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title"
                motion:ignore="TextContrastCheck" />

            <!-- COMPLETED: Add data binding value -->
            <!-- COMPLETED: Add visual styling and content -->
            <EditText
                android:id="@+id/address_line_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:autofillHints=""
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.line2}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_1"
                motion:ignore="TextContrastCheck" />

            <!-- COMPLETED: Add data binding value -->
            <!-- COMPLETED: Add visual styling and content -->
            <EditText
                android:id="@+id/city"
                android:layout_width="@dimen/match_constraints"
                android:layout_height="@dimen/edittext_height"
                android:autofillHints=""
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.city}"
                app:layout_constraintEnd_toStartOf="@id/state"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_2"
                motion:ignore="TextContrastCheck" />

            <!-- COMPLETED: Add default values from provided resources  -->
            <!-- COMPLETED: Add data binding value -->
            <!-- COMPLETED: Add visual styling and content -->
            <Spinner
                android:id="@+id/state"
                stateValue="@{viewModel.address.state}"
                android:layout_width="@dimen/match_constraints"
                android:layout_height="@dimen/match_constraints"
                android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_REGION"
                android:contentDescription="@string/state_sample_text"
                android:inputType="textPostalAddress"
                app:layout_constraintBottom_toBottomOf="@id/city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/city"
                app:layout_constraintTop_toTopOf="@id/city" />

            <!-- COMPLETED: Add data binding value -->
            <!-- COMPLETED: Add visual styling and content -->
            <EditText
                android:id="@+id/zip"
                android:layout_width="@dimen/match_constraints"
                android:layout_height="@dimen/edittext_height"
                android:autofillHints=""
                android:hint="@string/zip"
                android:inputType="number"
                android:maxLength="5"
                android:minHeight="@dimen/edittext_height"
                android:text="@={viewModel.address.zip}"
                app:layout_constraintEnd_toEndOf="@id/city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city"
                motion:ignore="TextContrastCheck" />

            <!-- COMPLETED: Add visual styling and label -->

            <Button
                android:id="@+id/button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="@dimen/button_height"
                android:clickable="@{viewModel.showRepresentativesLoading ? false : true}"
                android:text="@string/find_my_representatives_button"
                app:layout_constraintTop_toBottomOf="@id/zip"
               />

            <!-- COMPLETED: Add visual styling and content -->

            <!-- COMPLETED: Add visual styling and content -->
            <Button
                android:id="@+id/button_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:height="@dimen/button_height"
                android:clickable="@{viewModel.showRepresentativesLoading ? false : true}"
                android:text="@string/use_my_location_button"
                app:layout_constraintTop_toBottomOf="@id/button_search"
                 />

            <TextView
                android:id="@+id/representative_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_representatives"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_location"

                />

            <!-- COMPLETED: Add Representatives RecyclerView -->

            <!-- COMPLETED: Add visual styling and content -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/match_constraints"
                android:layout_marginTop="@dimen/margin_normal"
                android:gravity="center"
                android:textAlignment="center"
                android:visibility="@{viewModel.showRepresentativesLoading ? View.GONE : View.VISIBLE}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/representative_title"

                />


        </androidx.constraintlayout.motion.widget.MotionLayout>

        <ProgressBar
            android:id="@+id/progressBarRepresentatives"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/progress_bar_height"
            android:visibility="@{viewModel.showRepresentativesLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/bias_center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>