<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.android.politicalpreparedness.MainActivity">


            <!-- COMPLETED: Add image for home screen logo. -->

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/upcomingButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="@dimen/bias_center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ballot_logo"
                android:contentDescription="@string/ballot_logo" />


            <!-- COMPLETED: Add Button to navigate to upcoming elections. -->

            <Button
                android:id="@+id/upcomingButton"
                android:layout_width="@dimen/match_constraints"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:text="@string/upcoming_elections"
                app:layout_constraintBottom_toTopOf="@+id/representativeButton"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView" />

            <!-- COMPLETED: Add Button to navigate to representatives. -->

            <Button
                android:id="@+id/representativeButton"
                android:layout_width="@dimen/match_constraints"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:text="@string/find_my_representatives"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>